k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: bid-eval-backend
spec:
  selector:
    app: bid-eval-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
